# ros2-mobile-robot-modeling-simulation

./: .gitignore  README.md
src/edges_bringup/: CMakeLists.txt  package.xml
src/edges_bringup/config/: diff_drive.yaml
src/edges_bringup/launch/: soprano_robot.launch.py
src/gazebo_turtle_bridge/: package.xml  setup.cfg  setup.py
src/gazebo_turtle_bridge/gazebo_turtle_bridge/: turtle_bridge_node.py
src/gazebo_turtle_bridge/launch/: bridge.launch.py
src/robot_description/: CMakeLists.txt  package.xml
src/robot_description/rviz/: rviz.rviz
src/robot_description/urdf/: material.xacro  soprano.urdf.xacro  soprano_gazebo.xacro  soprano_mobile_robot.xacro
src/robot_description/worlds/: edges_academy.world
